#50 temporary fix for shares overflow

--- a/app/assets/stylesheets/components/_modals.sass
+++ b/app/assets/stylesheets/components/_modals.sass
@@ -56,3 +56,6 @@
       font-size: .85rem
       font-family: 'Monda'
 
+.reveal-modal#folder-share-modal
+  top: 3rem
+
