--- a/app/assets/stylesheets/components/_share_settings.sass
+++ b/app/assets/stylesheets/components/_share_settings.sass
@@ -60,6 +60,8 @@
   ul.user-list
     list-style: none
     margin: 0
+    overflow-y: auto
+    max-height: 18rem
 
     li
       border-left: rem-calc(3) solid $primary-color
